# perl-xs

./: .travis.yml  Cargo.toml  LICENSE  README.md  cpanfile  rustfmt.toml
bench/: .gitignore  Makefile  compare.pl
bench/rs/: Makefile.PL
bench/rs/lib/XSBench/: RS.pm
bench/rs/src/: lib.rs
bench/xs/: Makefile.PL  XS.xs
bench/xs/lib/XSBench/: XS.pm
crates/macro/: Cargo.toml
crates/macro-derive/: Cargo.toml  LICENSE-MIT
crates/macro-derive/src/: lib.rs
crates/macro-function/: Cargo.toml
crates/macro-function/src/: lib.rs
crates/macro-support/: Cargo.toml
crates/macro-support/src/: ast.rs  derive.rs  error.rs  field.rs  function.rs  lib.rs  package.rs
crates/macro/src/: lib.rs
perl_xs_derive/: Cargo.toml
perl_xs_derive/src/: lib.rs
perlxs_derive/: Cargo.toml
perlxs_derive/src/: lib.rs
perlxs_derive_internals/: Cargo.toml
perlxs_derive_internals/src/: ast.rs  error.rs  field.rs  lib.rs
src/: array.rs  boot.rs  context.rs  convert.rs  croak.rs  error.rs  handle.rs  hash.rs  helper_macros.rs  lib.rs  macros.rs  pushable.rs  raw.rs  registry.rs  scalar.rs
t/: .gitignore  Makefile.PL
t/lib/: XSTest.pm
t/src/: array.rs  codegen.rs  data.rs  derive.rs  hash.rs  lib.rs  panic.rs  param.rs  scalar.rs  stack.rs
t/t/: 001-stack.t  array.t  codegen.t  context-stack-push.t  data.t  derive.t  hash.t  panic.t  param.t  scalar-flags.t  scalar-new.t  scalar-sv-str.t  scalar-unicode.t
