[package]
name = "perl-xs"
version = "0.1.0"
authors = ["Vickenty Fesunov <kent@setattr.net>"]
license = "BSD-2-Clause"
edition = "2018"

[dependencies]
perl-sys = { git="https://github.com/vickenty/perl-sys" }
perl-xs-macro = { path  = "crates/macro" }
lazy_static = "1.3.0"
ctor = "0.1.9"

[features]
debug_print_generated_code=[]