[package]
name = "perl-xs-derive"
version = "0.1.0"
authors = ["Vickenty Fesunov <kent@setattr.net>"]
license = "BSD-2-Clause"

[badges]
travis-ci = { repository = "serde-rs/serde" }

[lib]
name = "serde_derive"
proc-macro = true

[dependencies]
syn = "0.11.11"
quote = "0.3.15"

[dependencies.perl-xs]
path = "../perl-xs"