[package]
name = "perlxs_derive"
version = "0.1.0"
authors = ["perl-xs Authors"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "perlxs_derive"
proc-macro = true

[dependencies]
syn = "0.11.11"
quote = "0.3.15"
perl-xs = { path = "../" }
perlxs_derive_internals = { path = "../perlxs_derive_internals" }