[package]
name = "perl-xs-macro-derive"
version = "0.1.0"
authors = ["perl-xs Authors"]
edition = "2018"

[lib]
name = "perl_xs_macro_derive"
proc-macro = true

[dependencies]
syn = { version = "0.15.39", features = ["full", "extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4.30"
perl-xs-macro-support = { path = "../macro-support" }
